Projet_GL/src/test/deca/syntax/valid/stupidzero.deca
{
	float x = 0X0.0p+0f;
}
