Projet_GL/src/test/deca/syntax/invalid/unprovided/big_float.deca
// Float trop grand

{
    float tresgrand = 23454635634563457345623462356345734578345623423623546356435763545623452346235423456234652345346357658679689678765.3f;
}
